--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
     </div>
   </body>
   <script src="./node_modules\axios\dist\axios.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script>
     let cities = [
       {
