--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         city: cityName,
       };
       axios
-        .get("http://api.aladhan.com/v1/timingsByCity", {
+        .get("https://api.aladhan.com/v1/timingsByCity", {
           params: params,
         })
         .then(function (response) {
